# LangChain-Emoji

./: .gitignore  README.md  pyproject.toml  settings.yaml
docs/: config.md  systemd.md
docs/pic/: flowstruct.drawio
frontend/: emoji.py
langchain_emoji/: __init__.py  __main__.py  __version__.py  di.py  launcher.py  main.py  paths.py
langchain_emoji/components/embedding/: embedding_component.py
langchain_emoji/components/embedding/custom/zhipuai/: __init__.py
langchain_emoji/components/llm/: llm_component.py
langchain_emoji/components/llm/custom/zhipuai/: __init__.py
langchain_emoji/components/minio/: minio_component.py
langchain_emoji/components/trace/: trace_component.py
langchain_emoji/components/vector_store/: __init__.py  vector_store_component.py
langchain_emoji/components/vector_store/chroma/: chroma.py
langchain_emoji/components/vector_store/tencent/: tencent.py
langchain_emoji/server/config/: config_router.py
langchain_emoji/server/emoji/: emoji_prompt.py  emoji_router.py  emoji_service.py
langchain_emoji/server/health/: health_router.py
langchain_emoji/server/trace/: trace_router.py
langchain_emoji/server/utils/: auth.py  model.py
langchain_emoji/server/vector_store/: vector_store_router.py  vector_store_server.py
langchain_emoji/settings/: settings.py  settings_loader.py
tools/: datainit.py  json2jsonl.py
