[tool.poetry]
name = "langchain-emoji"
version = "0.1.0"
description = ""
authors = ["ptonlix <260431910@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
uvicorn = "^0.29.0"
langchain = "^0.1.16"
fastapi = "^0.110.1"
injector = "^0.21.0"
tiktoken = "^0.6.0"
openai = "^1.23.1"
zhipuai = "^2.0.1"
watchfiles = "^0.21.0"
tcvectordb = "^1.3.2"
jsonlines = "^4.0.0"
gdown = "^5.1.0"
minio = "^7.2.7"
langchain-chroma = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
